force-app/main/default/objects/Account/fields/ThisPick__c.field-meta.xml
<CustomField>
    <fullName>ThisPick__c</fullName>
    <label>ThisPick</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>This</fullName>
            </value>
            <value>
                <fullName>That</fullName>
            </value>
            <value>
                <fullName>There</fullName>
            </value>
            <value>
                <fullName>When</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>